# cut-video

./: .gitignore  Cargo.toml  README.md
src/: mini.rs  server.rs
templates/: index.html.tera
